--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,9 @@ body{
     margin:20px auto;
     padding:10px;
     width:90%;
-    height:1000px;
+    height:100vh;
     max-width:400px;
-    max-height: 500px;
+  
     background: linear-gradient(rgb(20, 20, 20) , rgb(213, 240, 242) );
 text-align: center;
 border-radius: 20px;
