--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
     margin:20px auto;
     padding:10px;
     width:90%;
-    height:100vh;
+    height:90vh;
     max-width:400px;
   
     background: linear-gradient(rgb(20, 20, 20) , rgb(213, 240, 242) );
@@ -85,7 +85,7 @@ option {
 .exercices{
     display: none;
     margin:10px auto 0;
-    height:280px;
+    height:60%;
     max-width:450px;
     width:100%;
     overflow: auto;
@@ -98,7 +98,11 @@ option {
     height: 0;
 }
 /* list of the exercises */
-
+ul{
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
+}
 ul li{
     display:flex;
     justify-content: space-between;
